--- a/asteroids.html
+++ b/asteroids.html
@@ -13,7 +13,8 @@
 <canvas id="asteroids-container" width="1200" height="400"></canvas>
 <script src="asteroids.js"></script>
 <script>
-    Asteroids.init();
+    var asteroids = new Asteroids();
+    asteroids.init();
 </script>
 </body>
 </html>
