Added debug init option

--- a/asteroids.html
+++ b/asteroids.html
@@ -14,7 +14,9 @@
 <script src="asteroids.js"></script>
 <script>
     var asteroids = new Asteroids();
-    asteroids.init();
+    asteroids.init({
+        debug_mode: true
+    });
 </script>
 </body>
 </html>
