Added demo link to documentation

--- a/asteroids.html
+++ b/asteroids.html
@@ -15,7 +15,7 @@
 <script>
     var asteroids = new Asteroids();
     asteroids.init({
-        debug_mode: true,
+        debug_mode: false,
         levels: {
             1: {
                 asteroids: 3,
