--- a/asteroids.html
+++ b/asteroids.html
@@ -18,32 +18,35 @@
         debug_mode: false,
         levels: {
             1: {
-                asteroids: 3,
+                asteroids: 1,
                 asteroid_speed: 1,
-                ufos: 2,
+                ufos: 1,
                 ufo_speed: 2,
                 ufo_min_pause_time: 1000,
                 ufo_max_pause_time: 3000,
                 ufo_missile_fire_rate: 1000
             },
             2: {
-                asteroids: 4,
+                asteroids: 1,
                 asteroid_speed: 2,
-                ufos: 2,
+                ufos: 1,
                 ufo_speed: 3,
                 ufo_min_pause_time: 1000,
                 ufo_max_pause_time: 3000,
                 ufo_missile_fire_rate: 1000
             },
-            3: {
-                asteroids: 5,
-                asteroid_speed: 2,
-                ufos: 2,
-                ufo_speed: 4,
-                ufo_min_pause_time: 1000,
-                ufo_max_pause_time: 3000,
-                ufo_missile_fire_rate: 1000
-            }
+//            3: {
+//                asteroids: 5,
+//                asteroid_speed: 2,
+//                ufos: 2,
+//                ufo_speed: 4,
+//                ufo_min_pause_time: 1000,
+//                ufo_max_pause_time: 3000,
+//                ufo_missile_fire_rate: 1000
+//            }
+        },
+        gameCompleted: function() {
+            alert('You won the game!');
         }
     });
 </script>
