Added super cool Nyan mode

--- a/asteroids.html
+++ b/asteroids.html
@@ -16,6 +16,7 @@
     var asteroids = new Asteroids();
     asteroids.init({
         debug_mode: false,
+        nyan_mode: true,
         levels: {
             1: {
                 asteroids: 3,
