Added nyan path override to point correct nyan sprite source in different environments

--- a/asteroids.html
+++ b/asteroids.html
@@ -17,6 +17,7 @@
     asteroids.init({
         debug_mode: false,
         nyan_mode: true,
+        nyan_path_override: '',
         levels: {
             1: {
                 asteroids: 3,
