--- a/asteroids.html
+++ b/asteroids.html
@@ -18,6 +18,7 @@
         debug_mode: false,
         nyan_mode: true,
         nyan_path_override: '',
+        nyan_sound: true,
         levels: {
             1: {
                 asteroids: 3,
